test_suite/tests/errors/unknown_attribute.rs
use banish::banish;

fn main() {
    banish! {
        #[unknown_attr]
        @foo
            done? { return; }
    }
}
